--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@types/express": "^4.17.11"
   },
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13"
   }
 }
