--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,12 @@
     "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3",
-    "@types/express": "^4.17.11"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongoose": "^5.11.13"
   }
