--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "ts-node-dev": "^1.1.1",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13"
