--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.1.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
@@ -15,7 +16,9 @@
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.3.3",
+    "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
