--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modal": "^11.7.0",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12"
   },
