--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "1.9.2",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
