--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.4.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
