--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
+    "react-currency-input-field": "^3.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
