--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.4.0",
     "react-currency-input-field": "^3.4.1",
     "react-dom": "^17.0.2",
