--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
+    "on-screen-keyboard-detector": "^2.3.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.4.0",
