#62 Updated some webapp colors.

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#39393A",
-  "background_color": "#31C6E8"
+  "theme_color": "#6514A4",
+  "background_color": "#4C0783"
 }
