--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#6514A4",
+  "theme_color": "#4C0783",
   "background_color": "#4C0783"
 }
